--- a/app/src/main/res/layout/activity_historico_do_mes.xml
+++ b/app/src/main/res/layout/activity_historico_do_mes.xml
@@ -11,6 +11,35 @@
         android:layout_height="wrap_content"
         android:background="@color/Vermelho"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:id="@+id/toolbar_main"/>
+        android:layout_alignParentTop="true"
+        android:id="@+id/toolbar_historicoDoMes"/>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/lista_gastos_historico"
+        android:layout_below="@id/toolbar_historicoDoMes"
+        android:layout_above="@id/txtTotalDoMes_historico"
+        android:layout_margin="10dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxWidth="250dp"
+        android:minHeight="20dp"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/txtTotalDoMes_historico"
+        android:gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:layout_alignParentBottom="true"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt01"
+        android:gravity="center"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
