--- a/app/src/main/res/layout/dialog_criar_gasto.xml
+++ b/app/src/main/res/layout/dialog_criar_gasto.xml
@@ -24,4 +24,11 @@
         android:layout_marginRight="15dp"
         />
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:id="@+id/spinner_categoria"
+        style="@style/Widget.AppCompat.Spinner.Underlined"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="15dp"/>
 </LinearLayout>
