--- a/app/src/main/res/layout/activity_gastos_da_categoria.xml
+++ b/app/src/main/res/layout/activity_gastos_da_categoria.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GastosDaCategoria">
+    tools:context=".Gastos_da_categoria.GastosDaCategoria">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
@@ -19,4 +19,11 @@
         android:id="@+id/listView_gastos_categoria"
         android:layout_margin="10dp"
         android:layout_below="@id/toolbar_gastos_da_categoria"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/txt02"/>
+
 </RelativeLayout>
