--- a/app/src/main/res/layout/dialog_criar_gasto.xml
+++ b/app/src/main/res/layout/dialog_criar_gasto.xml
@@ -9,8 +9,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/txtNome"
         android:hint="Com o que você gastou?"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginHorizontal="16dp"
         />
 
     <EditText
@@ -20,8 +19,7 @@
         android:hint="Quanto custou?"
         android:inputType="numberDecimal"
         android:digits="0123456789."
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginHorizontal="16dp"
         />
 
     <Spinner
