--- a/app/src/main/res/layout/fragment_relatorio_do_mes.xml
+++ b/app/src/main/res/layout/fragment_relatorio_do_mes.xml
@@ -14,6 +14,7 @@
         android:gravity="center_vertical"
         android:layout_marginTop="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        style="list"
         android:layout_marginHorizontal="10dp"/>
 
     <TextView
