--- a/app/src/main/res/layout/fragment_relatorio_do_mes.xml
+++ b/app/src/main/res/layout/fragment_relatorio_do_mes.xml
@@ -6,35 +6,58 @@
     android:orientation="vertical"
     tools:context=".Relatorio.RelatorioDoMes">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="40dp"
-        android:id="@+id/txtRelatorio1"
-        android:gravity="center_vertical"
-        android:layout_marginTop="10dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        style="list"
-        android:layout_marginHorizontal="10dp"/>
+        android:layout_margin="10dp"
+        android:orientation="vertical"
+        android:background="@drawable/layout_arredondado">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="40dp"
-        android:id="@+id/txtRelatorio2"
-        android:gravity="center_vertical"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="10dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="40dp"
+            android:id="@+id/txtRelatorio1"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            android:gravity="center_vertical"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/Branco"
+            android:textAlignment="center"
+            android:text="Total de ativos:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:layout_marginHorizontal="10dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="40dp"
-        android:id="@+id/txtRelatorio3"
-        android:gravity="center_vertical"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="10dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="40dp"
+            android:id="@+id/txtRelatorio2"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/Branco"
+            android:textAlignment="center"
+            android:text="Total de gastos:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="40dp"
+            android:id="@+id/txtRelatorio3"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            android:textColor="@color/Branco"
+            android:textAlignment="center"
+            android:text="Saldo atual:"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginHorizontal="10dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
